# idecomp

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  README.md  deploy-requirements.txt  dev-requirements.txt  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  teste.txt  teste_leituracortdeco.py
.claude/agent-memory/code-reviewer/: MEMORY.md
.github/workflows/: docs.yml  main.yml  publish.yml  release.yml
_downloads/322c4db00a01e15492656dc23a8f5849/: plot_dec_oper_sist.ipynb
_downloads/5c4947135c27f11f65f4badb3446d97d/: plot_relato.ipynb
_downloads/5dcbddf50d31e5ab1a76de94c33ce84e/: plot_edit_dadger.ipynb
_downloads/6b500080214ab057cd247866f3caebbd/: plot_edit_dadger.py
_downloads/b31e6226b5dc821bc200ae0061b084f0/: plot_dadger.py
_downloads/f0ffe67c4d518d1bff2f791e100330aa/: plot_dadger.ipynb
_downloads/f63d1bf38695fd50649e38087fe10732/: plot_relato.py
_modules/: index.html
_modules/idecomp/decomp/: arquivos.html  avl_cortesfpha_dec.html  avl_turb_max.html  caso.html  cortdeco.html  custos.html  dadger.html  dadgnl.html  dec_avl_evap.html  dec_cortes_evap.html  dec_desvfpha.html  dec_eco_cotajus.html  dec_eco_discr.html  dec_eco_evap.html  dec_eco_qlat.html  dec_estatevap.html  dec_estatfpha.html  dec_fcf_cortes.html  dec_oper_evap.html  dec_oper_gnl.html  dec_oper_interc.html  dec_oper_ree.html  dec_oper_rhesoft.html  dec_oper_sist.html  dec_oper_usie.html  dec_oper_usih.html  dec_oper_usit.html  decomptim.html  eco_fpha.html  hidr.html  (+11 more)
_sources/: sg_execution_times.rst.txt
_sources/apresentacao/: apresentacao.rst.txt
_sources/examples/: index.rst.txt  plot_dadger.rst.txt  plot_dec_oper_sist.rst.txt  plot_edit_dadger.rst.txt  plot_relato.rst.txt  sg_execution_times.rst.txt
_sources/geral/: instalacao.rst.txt
_static/: documentation_options.js
apresentacao/: apresentacao.html
benchmarks/: bench_import.py  bench_read.py  benchmark_results.md  run_benchmarks.py
docs/: .buildinfo  examples.html  genindex.html  index.html  install.html  objects.inv  reference.html  search.html  searchindex.js  tutorial.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  install.rst.txt  tutorial.rst.txt
docs/_static/: documentation_options.js
docs/auto_examples/: index.html  plot_dadger.html  plot_dec_oper_sist.html  plot_relato.html  plot_vazoes.html  sg_execution_times.html
docs/examples/: dadger_example_notebook.html  dadger_notebook.html  index.html
docs/notebooks/: dadger_notebook.html  index.html
docs/source/: conf.py  index.rst  install.rst  reference.rst  sg_execution_times.rst  tutorial.rst
docsrc/examples/: README.txt
docsrc/source/: conf.py  examples.rst  index.rst  install.rst  tutorial.rst
examples/: README.rst  dadger.ipynb  dadger.rv0  index.html  plot_dadger.html  plot_dadger.py  plot_dec_oper_sist.html  plot_dec_oper_sist.py  plot_edit_dadger.html  plot_edit_dadger.py  plot_relato.html  plot_relato.py  relato.rv0  sg_execution_times.html
examples/decomp/: dadger.rv0  dec_oper_sist.csv
geral/: contribuicao.html  instalacao.html  tutorial.html
idecomp/: __init__.py  config.py
idecomp/_utils/: arquivo.py  bloco.py  blocobinario.py  dadosarquivo.py  dadosdadger.py  escrita.py  escritabinario.py  escritablocos.py  escritaregistros.py  leitura.py  leiturabinario.py  leiturablocos.py  leituraregistros.py  registrodadger.py  registrodecomp.py  registros.py  registrosbinario.py  utils.py
idecomp/decomp/: __init__.py  arquivos.py  avl_cortesfpha_dec.py  avl_turb_max.py  caso.py  cortdeco.py  custos.py  dadger.py  dadgnl.py  dec_avl_evap.py  dec_cortes_evap.py  dec_desvfpha.py  dec_eco_cotajus.py  dec_eco_discr.py  dec_eco_evap.py  dec_eco_qlat.py  dec_estatevap.py  dec_estatfpha.py  dec_fcf_cortes.py  dec_oper_evap.py  dec_oper_gnl.py  dec_oper_interc.py  dec_oper_ree.py  dec_oper_rhesoft.py  dec_oper_sist.py  dec_oper_usie.py  dec_oper_usih.py  dec_oper_usit.py  decomptim.py  eco_fpha.py  fcfnw.py  hidr.py  inviabunic.py  mapcut.py  oper_desvio_fpha.py  oper_disp_usih.py  oper_disp_usih_ree.py  oper_disp_usih_subm.py  polinjus.py  postos.py  (+4 more)
idecomp/libs/: restricoes.py  usinas_hidreletricas.py
plans/idecomp-quality-performance/: .implementation-state.json  00-master-plan.md  README.md
plans/infra-docs-overhaul/: .implementation-state.json  00-master-plan.md  README.md
referencia/decomp/: index.html
referencia/libs/: index.html
tests/_arquivos/: dadger.rv0  dadgerhe.rv0  dadgnl.rv0  inviab_unic.rv0  relato.rv0  relato.rv1  relato.rv2  relato.rv3  relato.rv4  relgnl.rv0  sumario.rv0
tests/_saidas/: dadger.rv0  dadgnl.rv0
tests/decomp/: test_arquivos.py  test_avl_cortesfpha_dec.py  test_avl_turb_max.py  test_caso.py  test_cortdeco.py  test_custos.py  test_dadger.py  test_dadgnl.py  test_dec_avl_evap.py  test_dec_cortes_evap.py  test_dec_desvfpha.py  test_dec_eco_cotajus.py  test_dec_eco_discr.py  test_dec_eco_evap.py  test_dec_eco_qlat.py  test_dec_estatevap.py  test_dec_estatfpha.py  test_dec_fcf_cortes.py  test_dec_oper_evap.py  test_dec_oper_gnl.py  test_dec_oper_interc.py  test_dec_oper_ree.py  test_dec_oper_rhesoft.py  test_dec_oper_sist.py  test_dec_oper_usie.py  test_dec_oper_usih.py  test_dec_oper_usit.py  test_decomptim.py  test_eco_fpha.py  test_fcfnw.py  test_hidr.py  test_inviabunic.py  test_mapcut.py  test_oper_desvio_fpha.py  test_oper_disp_usih.py  test_oper_disp_usih_ree.py  test_oper_disp_usih_subm.py  test_polinjus.py  test_postos.py  test_relato.py  (+3 more)
tests/libs/: test_restricoes.py  test_usinas_hidreletricas.py
(+332 files in other folders)
