[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idecomp"
dynamic = ["version"]
dependencies = [
    "cfinterface>=1.9.0",
    "numpy>=2.0",
    "pandas>=2.2",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
  {name = "Mariana Noel", email = "marianasimoesnoel@gmail.com"},
]
description = "idecomp"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "ruff",
    "mypy",
    "sphinx-rtd-theme",
    "sphinx-gallery",
    "sphinx",
    "numpydoc",
    "plotly",
    "matplotlib",
]

[project.urls]
Documentation = "https://rjmalves.github.io/idecomp/"
Repository = "https://github.com/rjmalves/idecomp/"

[tool.hatch.version]
path = "idecomp/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "idecomp/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 80

[tool.mypy]
warn_return_any = false

[[tool.mypy.overrides]]
module = "idecomp.decomp.*"
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "idecomp.decomp.modelos.*"
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "idecomp.decomp.modelos.blocos.*"
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "idecomp.decomp.modelos.arquivoscsv.*"
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "idecomp.libs.*"
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "idecomp.libs.modelos.*"
strict = true
warn_return_any = false

[[tool.mypy.overrides]]
module = "idecomp.config"
strict = true
warn_return_any = false

# Remove this override once cfinterface 1.9.0 is published to PyPI
[tool.uv.sources]
cfinterface = { path = "/home/rogerio/git/cfinterface" }
