[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idecomp"
dynamic = ["version"]
dependencies = [
    "cfinterface>=1.8,<=1.8.3",
    "numpy>=2.0",
    "pandas>=2.2",
]
requires-python = ">= 3.10"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
  {name = "Mariana Noel", email = "marianasimoesnoel@gmail.com"},
]
description = "Pacote para manipulacao dos arquivos do DECOMP"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
lint = ["ruff", "mypy"]
docs = [
    "sphinx",
    "furo",
    "sphinx-gallery",
    "numpydoc",
    "plotly",
    "matplotlib",
]
dev = ["idecomp[test,lint,docs]"]

[project.urls]
Documentation = "https://rjmalves.github.io/idecomp/"
Repository = "https://github.com/rjmalves/idecomp/"

[tool.hatch.version]
path = "idecomp/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "idecomp/",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
strict = true

[[tool.mypy.overrides]]
module = "cfinterface.*"
ignore_missing_imports = true
warn_return_any = false
