[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idecomp"
dynamic = ["version"]
dependencies = [
    "cfinterface>=1.10.0",
    "numpy>=2.2.1",
    "pandas>=3.0.0",
]
requires-python = ">= 3.11"
authors = [
  {name = "Rogerio Alves", email = "rogerioalves.ee@gmail.com"},
  {name = "Mariana Noel", email = "marianasimoesnoel@gmail.com"},
]
description = "Pacote para manipulacao dos arquivos do DECOMP"
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]
lint = ["mypy", "pre-commit", "ruff"]
docs = [
    "sphinx",
    "furo",
    "sphinx-gallery",
    "numpydoc",
    "plotly",
    "matplotlib",
]
dev = ["idecomp[test,lint,docs]"]

[project.urls]
Documentation = "https://rjmalves.github.io/idecomp/"
Repository = "https://github.com/rjmalves/idecomp/"

[tool.hatch.version]
path = "idecomp/__init__.py"

[tool.hatch.build.targets.wheel]
include = [
  "idecomp/",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
per-file-ignores = { "examples/*.py" = ["E402"] }

[tool.mypy]
warn_return_any = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "idecomp",
    "idecomp.decomp",
    "idecomp.decomp.*",
    "idecomp.libs.*",
]
strict = true
warn_return_any = false
